# tunnel

dsp2vst/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
dsp2vst/src/RTClasses/: RayUtils.cpp  RayUtils.h  Surface.h  Surfaces.cpp  Surfaces.h
dsp2vst/src/app/: benchmark_main.cpp  main_engine.cpp  main_surface_test.cpp
dsp2vst/src/audio/: AudioBuffer_opt.h  AudioEngine.cpp  AudioEngine.h  AudioParameter.h
dsp2vst/src/dsp/: CircularBuffer.cpp  CircularBuffer.h  LowPassFilter.cpp  LowPassFilter.h  Queue.cpp  Queue.h
dsp2vst/src/effects/: Effect.h  EffectChain.cpp  EffectChain.h  ffDelay.cpp  ffDelay.h
dsp2vst/src/io/: AudioFileIO.cpp  AudioFileIO.h
dsp2vst/src/juce/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
dsp2vst/src/translator/: translator.py
